linux (4.19~rc6-1~exp1) UNRELEASED; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * [ppc64el] udeb: Fix relative #include filenames in kernel-image module
    list (really fixes FTBFS?)
  * debian/bin, debian/lib/python: Fix most errors reported by pycodestyle

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 20 Sep 2018 02:40:54 +0100

linux (4.19~rc4-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * debian/control: Add arch-qualification to build-dependencies for linux-perf
    (Closes: #908519)
  * debian/control: Build-depend on libunwind-dev instead of libunwind8-dev
  * [hppa,mips*,powerpc*,sh4] debian/control: Build-depend on libunwind-dev for
    linux-perf
  * debian/control: Build-depend on libnuma-dev for linux-perf on all arches
  * debian/control: Remove "cross" from profiles for build-dep on libssl-dev
  * [mips64*] debian/control: Build-depend on gcc-multilib for linux-perf
  * debian/lib/python: Use raw strings for all regexes
  * debian/control: Fix restrictions for build-deps on asciidoctor and
    patchutils
  * Add support for specifying build-dependencies in binary package templates
  * debian/templates: Move various build-dependencies to binary package
    templates
  * linux-perf: Fix generation of Perl and Python interpreter dependencies
    (Closes: #908547)
  * lockdep, lib{cpupower,lockdep}-dev: Remove bogus deps on ${shlibs:Depends}
  * debian/rules.d/tools/power/linux-cpupower: Add "+" to recursive make
    commands
  * tools: x86_energy_perf_policy: Fix "uninitialized variable" warnings at -O2
  * tools: turbostat: Add checks for failure of fgets() and fscanf()
  * debian/control: Build-depend on texlive-latex-{base,extra}, dvipng for
    linux-doc
  * debian/rules{,.real}: Use /usr/share/dpkg/architecture.mk
  * debian/signing_templates/rules: Use /usr/share/dpkg/architecture.mk
  * linux-image-*-signed-template: Add ${misc:Depends} to Depends