@@ -5,7 +5,6 @@ import os
 import re
 import subprocess
 
-sys.path.append(sys.path[0] + "/../lib/python")
 from debian_linux.debian import Changelog, VersionLinux
 
 
