@@ -6,6 +6,8 @@ linux (4.19~rc6-1~exp1) UNRELEASED; urgency=medium
   * [ppc64el] udeb: Fix relative #include filenames in kernel-image module
     list (really fixes FTBFS?)
   * debian/bin, debian/lib/python: Fix most errors reported by pycodestyle
+  * debian/bin, debian/rules.real: Add symlink to Python package directory
+    instead of editing path
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 20 Sep 2018 02:40:54 +0100
 
